samples/_failures_safe/1761406613_2aee17_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cdb2710b.c: In function ‘main’:
./samples/SAFE/__tmp_cdb2710b.c:142:20: error: missing terminating " character
  142 |             printf("Enter elements for matrix
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_cdb2710b.c:142:13: error: expected expression at end of input
  142 |             printf("Enter elements for matrix
      |             ^~~~~~
./samples/SAFE/__tmp_cdb2710b.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cdb2710b.c:142:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cdb2710b.c:142:13: error: expected declaration or statement at end of input
